--- a/spring-cloud-config-eureka-bus/spring-cloud-config-client/src/main/resources/application.properties
+++ b/spring-cloud-config-eureka-bus/spring-cloud-config-client/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 spring.application.name=spring-cloud-config-client
 server.port=8002
 
+management.security.enabled=false
 
+spring.rabbitmq.host=192.168.0.6
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=123456
