--- a/spring-cloud-config-eureka-bus/spring-cloud-config-client/src/main/resources/bootstrap.properties
+++ b/spring-cloud-config-eureka-bus/spring-cloud-config-client/src/main/resources/bootstrap.properties
@@ -3,5 +3,6 @@ spring.cloud.config.profile=dev
 spring.cloud.config.label=master
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=spring-cloud-config-server
+spring.cloud.bus.trace.enabled=true
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8000/eureka/
