--- a/eureka-producer-consumer/spring-cloud-consumer/src/main/resources/application.properties
+++ b/eureka-producer-consumer/spring-cloud-consumer/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=spring-cloud-consumer
 server.port=9001
+#设置与Eureka Server交互的地址，查询服务和注册服务都需要依赖这个地址。默认是http://localhost:8761/eureka,多个地址可使用,分隔
 eureka.client.serviceUrl.defaultZone=http://localhost:8000/eureka/
 
