--- a/eureka-producer-consumer/spring-cloud-eureka/src/main/resources/application.properties
+++ b/eureka-producer-consumer/spring-cloud-eureka/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=spring-cloud-eureka
 
 server.port=8000
+#表示是否将自己注册到Eureka Server，默认为true
 eureka.client.register-with-eureka=false
+#表示是否从Eureka Server获取注册信息，默认为true
 eureka.client.fetch-registry=false
-
+#设置与Eureka Server交互的地址，查询服务和注册服务都需要依赖这个地址。默认是http://localhost:8761/eureka,多个地址可使用,分隔
 eureka.client.serviceUrl.defaultZone=http://localhost:8000/eureka/
 
