--- a/spring-cloud-config-eureka-bus/spring-cloud-config-client/src/main/resources/application.properties
+++ b/spring-cloud-config-eureka-bus/spring-cloud-config-client/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=spring-cloud-config-client
 server.port=8002
-
+# 刷新时，关闭安全验证
 management.security.enabled=false
 
 spring.rabbitmq.host=192.168.0.6
