--- a/spring-cloud-config-eureka/spring-cloud-config-client/src/main/resources/bootstrap.properties
+++ b/spring-cloud-config-eureka/spring-cloud-config-client/src/main/resources/bootstrap.properties
@@ -1,7 +1,11 @@
 spring.cloud.config.name=neo-config
 spring.cloud.config.profile=dev
+#去掉了spring.cloud.config.uri直接指向server端地址的配置
+#spring.cloud.config.uri=http://localhost:8001/
 spring.cloud.config.label=master
+#开启Config服务发现支持
 spring.cloud.config.discovery.enabled=true
+#指定server端的name,也就是server端spring.application.name的值
 spring.cloud.config.discovery.serviceId=spring-cloud-config-server
-
+#指向注册中心的地址
 eureka.client.serviceUrl.defaultZone=http://localhost:8000/eureka/
