--- a/spring-cloud-config-svn-refresh/spring-cloud-config-client-refresh/src/main/resources/application.properties
+++ b/spring-cloud-config-svn-refresh/spring-cloud-config-client-refresh/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=spring-cloud-config-client
 server.port=8002
+#springboot 1.5.X 以上默认开通了安全认证，需要关闭
 management.security.enabled=false
