--- a/spring-cloud-config-eureka-bus/spring-cloud-config-server/src/main/resources/application.yml
+++ b/spring-cloud-config-eureka-bus/spring-cloud-config-server/src/main/resources/application.yml
@@ -7,10 +7,10 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/ityouknow/spring-cloud-starter/     # 配置git仓库的地址
+          uri: https://github.com/zhanghu5867/spring-cloud-examples/     # 配置git仓库的地址
           search-paths: config-repo                             # git仓库地址下的相对地址，可以配置多个，用,分割。
-          username: yourname                                        # git仓库的账号
-          password: yourpass                                    # git仓库的密码
+          username:                                         # git仓库的账号
+          password:                                     # git仓库的密码
   rabbitmq:
     host: 192.168.0.6
     port: 5672
@@ -22,7 +22,7 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8000/eureka/   ## 注册中心eurka地址
 
-
+# 刷新时，关闭安全验证
 management:
   security:
      enabled: false
