修改admin-eureka 不向注册中心注册自己

--- a/spring-boot-admin-eureka/spring-cloud-eureka/src/main/resources/application.yml
+++ b/spring-boot-admin-eureka/spring-cloud-eureka/src/main/resources/application.yml
@@ -5,8 +5,11 @@ spring:
     name: eureka
 eureka:
   client:
+    register-with-eureka: false     #false表示不向注册中心注册自己。
+    fetch-registry: false     #false表示自己端就是注册中心，我的职责就是维护服务实例，并不需要去检索服务
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+
 management:
   security:
     enabled: false
