--- a/spring-cloud-gateway/cloud-gateway-eureka/pom.xml
+++ b/spring-cloud-gateway/cloud-gateway-eureka/pom.xml
@@ -36,7 +36,7 @@
 			<artifactId>spring-cloud-starter-gateway</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis-reactive</artifactId>
 		</dependency>
 		<dependency>
